<resources>
    <string name="app_name">Food Market</string>
    <string name="email_address">Email Address</string>
    <string name="hint_email">Type your email address</string>
    <string name="hint_address">Type your address</string>
    <string name="hint_password">Type your password</string>
    <string name="hint_full_name">Type your full name</string>
    <string name="hint_phone_number">Type your phone number</string>
    <string name="hint_house_no">Type your house no</string>
    <string name="hint_city">Type your city</string>
    <string name="password">Password</string>
    <string name="house_no">House No.</string>
    <string name="address">Address</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="signup">Create New Account</string>
    <string name="full_name">Full name</string>
    <string name="Continue">Continue</string>
    <string name="phone">Phone No.</string>
    <string name="city">City</string>
    <string name="picture_empty">picture_empty</string>
    <string name="foodmarket">FoodMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yeay_compleated">Yeay! compleated</string>
    <string name="image">image</string>
    <string name="now_you_are_able_to_order_nsome_foods_as_a_self_reward">Now you are able to order\nsome foods as a self-reward</string>
    <string name="find_foods">Find Foods</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="let_s_get_some_foods">Let\'s get some foods</string>
    <string name="rp_28_000">Rp. 28.000</string>
    <string name="cherry_healthy">Cherry Healthy</string>
</resources>