<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignupAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="26dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/house_no" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_house_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSignupNow"
            style="@style/Button.Primary"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>