<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="26dp"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:contentDescription="@string/picture_empty"
            android:src="@drawable/ic_picture_empty"
            android:layout_width="110dp"
            android:layout_height="110dp" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_marginTop="16dp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:layout_marginTop="6dp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/Button.Primary"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>